# glowrs

./: Cargo.toml  Dockerfile.mkl
crates/glowrs/: Cargo.toml
crates/glowrs-server/: Cargo.toml
crates/glowrs-server/src/server/: data_models.rs  init.rs  state.rs
crates/glowrs-server/src/server/infer/: embed.rs
crates/glowrs-server/src/server/routes/: embeddings.rs
crates/glowrs/src/core/: embedder.rs  sentence_transformer.rs
crates/glowrs/src/core/config/: model.rs
crates/glowrs/tests/fixtures/embeddings/: examples.json
tests/: generate-fixtures.py
