[workspace]
members = [
	"crates/glowrs",
	"crates/glowrs-server"
]
resolver = "2"
exclude = ["tests", "scripts"]

[workspace.dependencies]
candle-core = { version = "0.8.3" }
candle-nn = { version = "0.8.3" }
candle-transformers = { version = "0.8.3" }
tokenizers = { version = "0.21.0" }
clap = { version = "4.5.31", features = ["derive"] }
hf-hub = { version = "0.4.2", features = ["tokio"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

# Enable high optimizations for candle in dev builds
[profile.dev.package]
candle-core = { opt-level = 3 }
candle-nn = { opt-level = 3 }
candle-transformers = { opt-level = 3 }

[workspace.package]
license = "Apache-2.0"
version = "0.5.0"

